--- a/site/themes/mttt/sass/_sanitize.scss
+++ b/site/themes/mttt/sass/_sanitize.scss
@@ -33,7 +33,9 @@
  */
 
 html {
-  cursor: default; /* 1 */
+  // disabled to allow appropriate cursor type per context
+  // cursor: default; /* 1 */
+
   line-height: 1.5; /* 2 */
   -moz-tab-size: 4; /* 3 */
   tab-size: 4; /* 3 */
